test/types/range/hilde/alignTypeError2.good
alignTypeError2.chpl:12: error: can't align a range with idxType int(8) using a value of type int(16)
alignTypeError2.chpl:13: error: can't align a range with idxType int(8) using a value of type int(32)
alignTypeError2.chpl:14: error: can't align a range with idxType int(8) using a value of type uint(8)
alignTypeError2.chpl:15: error: can't align a range with idxType int(8) using a value of type uint(16)
alignTypeError2.chpl:16: error: can't align a range with idxType int(16) using a value of type int(32)
alignTypeError2.chpl:17: error: can't align a range with idxType int(16) using a value of type uint(16)
alignTypeError2.chpl:18: error: can't align a range with idxType uint(8) using a value of type int(8)
alignTypeError2.chpl:19: error: can't align a range with idxType uint(8) using a value of type int(16)
alignTypeError2.chpl:20: error: can't align a range with idxType uint(8) using a value of type int(32)
alignTypeError2.chpl:21: error: can't align a range with idxType uint(8) using a value of type uint(16)
alignTypeError2.chpl:22: error: can't align a range with idxType uint(16) using a value of type int(8)
alignTypeError2.chpl:23: error: can't align a range with idxType uint(16) using a value of type int(16)
alignTypeError2.chpl:24: error: can't align a range with idxType uint(16) using a value of type int(32)
